# outus

./: LICENSE  Makefile  README.md
cpp_basic/hw-3/: CMakeLists.txt  argument.cpp  check_value.cpp  high_scores.cpp  random_value.cpp  test.cpp  training.cpp
cpp_basic/lect_3/: CMakeLists.txt  lec03_01_type_ranges_int.cpp  lec03_02_type_ranges_float.cpp  lec03_06_if.cpp  lec03_07_switch.cpp  lec03_08_while_do_loop.cpp  lec03_10_file_io.cpp  lec03_xx_cast_int_float.cpp
